// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProductItem /> check how renders should NOT render buyer quantity, condition and should render default photo and price without decimals 1`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
  width: 100%;
}

.c0 > *:not(:last-child) {
  margin-right: 2.4rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
  width: 13;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 > *:not(:last-child) {
  margin-right: 0;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
  width: 100%;
}

.c4 > *:not(:last-child) {
  margin-bottom: 0;
}

.c1 {
  border-bottom: 1px solid #DADFE1;
  padding: 1.2rem;
  -webkit-transition: background-color 0.1s;
  transition: background-color 0.1s;
}

.c1:hover {
  background-color: rgba(0,0,0,0.05);
  cursor: pointer;
}

.c1 .buyer-quantity-box {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 1.2rem;
}

.c5 {
  display: inline-block;
  font-style: normal;
  font-weight: normal;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin-bottom: 0;
  margin-left: 0;
  margin-right: 0;
  overflow: visible;
  text-overflow: clip;
  white-space: normal;
  font-size: 1.5rem;
}

.c6 {
  display: inline-block;
  font-style: normal;
  font-weight: normal;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin-bottom: 0;
  margin-left: 0;
  margin-right: 0;
  overflow: visible;
  text-overflow: clip;
  white-space: normal;
  font-size: 2.2rem;
  margin-top: calc(1.2rem + 0rem);
}

.c3 {
  max-height: 15rem;
  min-width: 13rem;
  width: 13rem;
}

.c3 img {
  max-height: 15rem;
  max-width: 13rem;
  object-fit: cover;
}

@media only screen and (max-width:24.5em) {
  .c1 .photo-box {
    max-height: 13rem;
    min-width: 10rem;
    width: 10rem;
  }
}

@media only screen and (max-width:22.5em) {
  .c1 .photo-box {
    max-height: 11rem;
    min-width: 8rem;
    width: 8rem;
  }
}

<a
    data-testid="ProductItem"
  >
    <div
      class="c0 c1"
      direction="row"
      spacing="3"
      width="100%"
      wrap="nowrap"
    >
      <div
        class="c2 c3"
        data-testid="ProductThumbnail"
        direction="row"
        height="15"
        spacing=""
        width="13"
        wrap="nowrap"
      >
        <img
          alt="product1"
          data-testid="ProductThumbnail-img"
          src="no-photo.png"
        />
      </div>
      <div
        class="c4"
        direction="column"
        spacing=""
        width="100%"
        wrap="nowrap"
      >
        <span
          class="c5"
          color=""
          display="inline-block"
          overflow="visible"
          size="3"
          spacing="0px"
          transform=""
        >
          product1
        </span>
        <span
          class="c6"
          color=""
          data-testid="ProductItem-price"
          display="inline-block"
          overflow="visible"
          size="5"
          spacing="0px"
          transform=""
        >
          $10
        </span>
      </div>
    </div>
  </a>
</DocumentFragment>
`;

exports[`<ProductItem /> check how renders should render everything correctly 1`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
  width: 100%;
}

.c0 > *:not(:last-child) {
  margin-right: 2.4rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
  width: 13;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 > *:not(:last-child) {
  margin-right: 0;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
  width: 100%;
}

.c4 > *:not(:last-child) {
  margin-bottom: 0;
}

.c1 {
  border-bottom: 1px solid #DADFE1;
  padding: 1.2rem;
  -webkit-transition: background-color 0.1s;
  transition: background-color 0.1s;
}

.c1:hover {
  background-color: rgba(0,0,0,0.05);
  cursor: pointer;
}

.c1 .buyer-quantity-box {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 1.2rem;
}

.c5 {
  display: inline-block;
  font-style: normal;
  font-weight: normal;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin-bottom: 0;
  margin-left: 0;
  margin-right: 0;
  overflow: visible;
  text-overflow: clip;
  white-space: normal;
  font-size: 1.5rem;
}

.c6 {
  display: inline-block;
  font-style: normal;
  font-weight: normal;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin-bottom: 0;
  margin-left: 0;
  margin-right: 0;
  overflow: visible;
  text-overflow: clip;
  white-space: normal;
  font-size: 1.3rem;
  margin-top: calc(0.8rem + 0rem);
}

.c7 {
  display: inline-block;
  font-style: normal;
  font-weight: normal;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin-bottom: 0;
  margin-left: 0;
  margin-right: 0;
  overflow: visible;
  text-overflow: clip;
  white-space: normal;
  color: #777;
}

.c8 {
  display: inline-block;
  font-style: normal;
  font-weight: normal;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin-bottom: 0;
  margin-left: 0;
  margin-right: 0;
  overflow: visible;
  text-overflow: clip;
  white-space: normal;
  font-size: 2.2rem;
  margin-top: calc(1.2rem + 0rem);
}

.c9 {
  display: inline-block;
  font-style: normal;
  font-weight: normal;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin-bottom: 0;
  margin-left: 0;
  margin-right: 0;
  overflow: visible;
  text-overflow: clip;
  white-space: normal;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
  color: #777;
  font-size: 1.3rem;
}

.c3 {
  max-height: 15rem;
  min-width: 13rem;
  width: 13rem;
}

.c3 img {
  max-height: 15rem;
  max-width: 13rem;
  object-fit: cover;
}

@media only screen and (max-width:24.5em) {
  .c1 .photo-box {
    max-height: 13rem;
    min-width: 10rem;
    width: 10rem;
  }
}

@media only screen and (max-width:22.5em) {
  .c1 .photo-box {
    max-height: 11rem;
    min-width: 8rem;
    width: 8rem;
  }
}

<a
    data-testid="ProductItem"
  >
    <div
      class="c0 c1"
      direction="row"
      spacing="3"
      width="100%"
      wrap="nowrap"
    >
      <div
        class="c2 c3"
        data-testid="ProductThumbnail"
        direction="row"
        height="15"
        spacing=""
        width="13"
        wrap="nowrap"
      >
        <img
          alt="product1"
          data-testid="ProductThumbnail-img"
          src="http://192.168.1.109:4000/products/p1/photo"
        />
      </div>
      <div
        class="c4"
        direction="column"
        spacing=""
        width="100%"
        wrap="nowrap"
      >
        <span
          class="c5"
          color=""
          display="inline-block"
          overflow="visible"
          size="3"
          spacing="0px"
          transform=""
        >
          product1
        </span>
        <span
          class="c6"
          color=""
          data-testid="ProductItem-condition"
          display="inline-block"
          overflow="visible"
          size="1"
          spacing="0px"
          transform=""
        >
          <span
            class="c7"
            color="#777"
            display="inline-block"
            overflow="visible"
            spacing="0px"
            transform=""
          >
            Condition:
          </span>
           New
        </span>
        <span
          class="c8"
          color=""
          data-testid="ProductItem-price"
          display="inline-block"
          overflow="visible"
          size="5"
          spacing="0px"
          transform=""
        >
          $10.60
        </span>
        <div
          class="buyer-quantity-box"
          data-testid="ProductItem-buyer-quantity"
        >
          <span
            class="c9"
            color="#777"
            display="inline-block"
            overflow="visible"
            size="1"
            spacing="0px"
            transform=""
          >
            2 people bought
          </span>
        </div>
      </div>
    </div>
  </a>
</DocumentFragment>
`;
